# thefuzz

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  benchmarks.py  pyproject.toml  release  requirements.txt  setup.cfg  setup.py  test_thefuzz.py  test_thefuzz_hypothesis.py  test_thefuzz_pytest.py  tox.ini
.github/workflows/: ci.yml
docs/: readme.md
thefuzz/: __init__.py  fuzz.py  fuzz.pyi  process.py  process.pyi  string_processing.py  utils.py  utils.pyi
