# Copyright (c) 2014 SeatGeek
# This file is part of thefuzz.

[metadata]
name = thefuzz
author = Adam Cohen
author_email = adam@seatgeek.com
license = GPL-2.0-only
description = Fuzzy string matching in python
url = https://github.com/seatgeek/thefuzz
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
packages = thefuzz
zip_safe = True

[options.extras_require]
speedup = python-levenshtein>=0.12
